<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundofadd"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AddFragment">


    <TextView
        android:id="@+id/tile_field"
        android:layout_marginTop="@dimen/inbtwn_margin"
        style="@style/Card_TextView"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/title"
        android:layout_marginLeft="@dimen/CardLRMArgin"
        android:layout_marginRight="@dimen/CardLRMArgin"
        android:layout_marginTop="@dimen/inbtwn_margin"
        android:background="@drawable/editbox"
        android:padding="@dimen/field_topMargin"
        android:textSize="@dimen/cardTextview"
        app:layout_constraintTop_toBottomOf="@+id/tile_field"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/description_field"
        style="@style/Card_TextView"
        android:layout_marginTop="@dimen/inbtwn_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note_description"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/groceries"
        android:background="@drawable/vegetables"
        android:layout_marginLeft="@dimen/CardLRMArgin"
        android:layout_marginRight="@dimen/CardLRMArgin"
        android:layout_marginTop="@dimen/inbtwn_margin"
        android:textColor="@color/black"
        android:textSize="@dimen/cardTextview"
        app:layout_constraintTop_toBottomOf="@+id/description_field"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:padding="@dimen/field_topMargin"
        android:layout_width="match_parent"
        android:layout_height="100dp"/>
    <TextView
        android:id="@+id/medtext"
        style="@style/Card_TextView"
        android:layout_marginTop="@dimen/inbtwn_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/medicines"
        app:layout_constraintTop_toBottomOf="@+id/groceries"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/mednote"
        android:background="@drawable/medicines"
        android:layout_marginLeft="@dimen/CardLRMArgin"
        android:layout_marginRight="@dimen/CardLRMArgin"
        android:padding="@dimen/field_topMargin"
        android:layout_marginTop="@dimen/inbtwn_margin"
        android:textColor="@color/black"
        android:textSize="@dimen/cardTextview"
        app:layout_constraintTop_toBottomOf="@+id/medtext"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="100dp"/>
    <TextView
        android:id="@+id/othertext"
        style="@style/Card_TextView"
        android:layout_marginTop="@dimen/inbtwn_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/other_items"
        app:layout_constraintTop_toBottomOf="@+id/mednote"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/otheritemsnote"
        android:background="@drawable/others"
        android:layout_marginLeft="@dimen/CardLRMArgin"
        android:layout_marginRight="@dimen/CardLRMArgin"
        android:layout_marginTop="@dimen/inbtwn_margin"
        android:textColor="@color/black"
        android:textSize="@dimen/cardTextview"
        app:layout_constraintTop_toBottomOf="@+id/othertext"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:padding="@dimen/field_topMargin"
        android:layout_width="match_parent"
        android:layout_height="100dp"/>


    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"

        android:layout_marginTop="@dimen/inbtwn_margin"
        app:layout_constraintTop_toBottomOf="@+id/otheritemsnote"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>