<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundofadd"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".EditFragment">

    <TextView
        android:layout_marginLeft="@dimen/CardLRMArgin"
        android:layout_marginRight="@dimen/CardLRMArgin"
        android:id="@+id/title_text"
        android:layout_marginTop="@dimen/inbtwn_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:textSize="@dimen/Update_Title"
        android:layout_height="wrap_content"
        style="@style/Card_TextView"/>
    <TextView
        android:id="@+id/grocerytext"
        style="@style/Card_TextView"
        android:layout_marginTop="@dimen/inbtwn_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note_description"
        app:layout_constraintTop_toBottomOf="@+id/title_text"
        app:layout_constraintLeft_toLeftOf="parent"/>


    <EditText
        android:layout_marginLeft="@dimen/CardLRMArgin"
        android:layout_marginRight="@dimen/CardLRMArgin"
        android:layout_marginTop="@dimen/inbtwn_margin"
        android:id="@+id/groceriesedittext"
        android:layout_width="match_parent"
        android:background="@drawable/vegetables"
        android:textColor="@color/black"
        android:textSize="@dimen/cardTextview"
        android:layout_height="100dp"
        android:padding="@dimen/field_topMargin"
        app:layout_constraintTop_toBottomOf="@+id/grocerytext"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <TextView
        android:id="@+id/medicinestext"
        style="@style/Card_TextView"
        android:layout_marginTop="@dimen/inbtwn_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/medicines"
        app:layout_constraintTop_toBottomOf="@+id/groceriesedittext"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/medicineseditnote"
        android:background="@drawable/medicines"
        android:layout_marginLeft="@dimen/CardLRMArgin"
        android:layout_marginRight="@dimen/CardLRMArgin"
        android:layout_marginTop="@dimen/inbtwn_margin"
        android:textColor="@color/black"
        android:textSize="@dimen/cardTextview"
        android:padding="@dimen/field_topMargin"
        app:layout_constraintTop_toBottomOf="@+id/medicinestext"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="100dp"/>
    <TextView
        android:id="@+id/otheritemstext"
        style="@style/Card_TextView"
        android:layout_marginTop="@dimen/inbtwn_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/other_items"
        app:layout_constraintTop_toBottomOf="@+id/medicineseditnote"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/otheritemseditnote"
        android:background="@drawable/others"
        android:layout_marginLeft="@dimen/CardLRMArgin"
        android:layout_marginRight="@dimen/CardLRMArgin"
        android:textColor="@color/black"
        android:textSize="@dimen/cardTextview"
        android:padding="@dimen/field_topMargin"
        android:layout_marginTop="@dimen/inbtwn_margin"
        app:layout_constraintTop_toBottomOf="@+id/otheritemstext"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="100dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>